# Angry_bird_game

./: .gitignore  CMakeLists.txt  LICENSE  Meeting-notes.md  OSX_cmakelist_OSX.txt  Project Document .docx  README.md
doc/SourceCode_Documentation/: annotated.html  bigger__bird_8hpp_source.html  bird_8hpp_source.html  class_bigger_bird-members.html  class_bigger_bird.html  class_bird-members.html  class_bird.html  class_contact_listener-members.html  class_contact_listener.html  class_entity-members.html  class_entity.html  class_explosion-members.html  class_explosion.html  class_explosive_bird-members.html  class_explosive_bird.html  class_ground-members.html  class_ground.html  class_level_loader-members.html  class_level_loader.html  class_obstacle-members.html  class_obstacle.html  class_pig-members.html  class_pig.html  class_score_board-members.html  class_score_board.html  class_score_manager-members.html  class_score_manager.html  class_sling_shot-members.html  class_sling_shot.html  class_speed_boost_bird.html  (+50 more)
src/: bigger_bird.cpp  bigger_bird.hpp  bird.cpp  bird.hpp  config_file  contactListener.hpp  entity.hpp  explosion.cpp  explosion.hpp  explosive_bird.cpp  explosive_bird.hpp  ground.cpp  ground.hpp  level_loader.cpp  level_loader.hpp  main.cpp  modeBoard.cpp  modeBoard.hpp  obstacle.cpp  obstacle.hpp  pig.cpp  pig.hpp  scoreBoard.cpp  scoreBoard.hpp  scoreManager.cpp  scoreManager.hpp  server.cpp  sling_shot.cpp  sling_shot.hpp  speedboost_bird.cpp  speedboost_bird.hpp  split_bird.cpp  split_bird.hpp  star.cpp  star.hpp  stone.cpp  stone.hpp  trajectory.cpp  trajectory.hpp  utility.cpp  (+5 more)
(+68 files in other folders)
